@@ -1,3 +1,7 @@
+2010-11-19 Lorenzo Natale <lorenzo.natale@iit.it>
+	main/app/CMakeLists.txt: fixed erroneus destination directory
+	for icubapp.py and app.txt.template
+
 2010-10-29 Lorenzo Natale <lorenzo.natale@iit.it>
 	main/conf/iCubHelpers.cmake modified icub_app functions, grouped code 
 	that was spread in different places in single functions to be used
